<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="380dp"
        android:layout_height="238dp"
        android:layout_marginBottom="20dp"
        app:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="2">

        <TextView
            android:id="@+id/option_one"
            android:layout_width="190dp"
            android:layout_height="119dp"
            android:background="#6200EA"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="80sp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/option_two"
            android:layout_width="190dp"
            android:layout_height="119dp"
            android:background="#64DD17"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="80sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/option_three"
            android:layout_width="190dp"
            android:layout_height="119dp"
            android:background="#C51162"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="80sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/option_four"
            android:layout_width="190dp"
            android:layout_height="119dp"
            android:background="#FFAB00"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="80sp"
            app:layout_column="1"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="246dp"
        android:layout_height="86dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/play_again"
        android:layout_width="111dp"
        android:layout_height="55dp"
        android:layout_marginBottom="220dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tracker"
        android:layout_width="100dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="13dp"
        android:background="#64DD17"
        android:gravity="center"
        android:text="@string/track"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="15dp"
        android:background="#FFAB00"
        android:gravity="center"
        android:text="@string/i_time"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>